<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/configurate_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_horizontal" 
    android:background="@drawable/configurate_bg">
    <TextView 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/action_settings"
      android:textColor="@color/black"
      android:textSize="@dimen/txtSize_title_larger"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="20dp"
    android:paddingRight="50dp"
    android:orientation="horizontal" 
    android:gravity="center_vertical"
    >
     <TextView 
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/ip_address"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/txtSize_title_medium"/>
      <TextView 
        android:id="@+id/configurate_txt_ipAddress"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize_title_medium"
        android:background="@drawable/edittext_normal"/>
   </LinearLayout>
	  <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:layout_marginTop="10dp"
	    android:paddingRight="50dp"
	    android:orientation="horizontal" 
	    android:gravity="center_vertical"
	    >
        <TextView 
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/port_address"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/txtSize_title_medium"/>
      <TextView
        android:id="@+id/configurate_txt_portAddress" 
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize_title_medium"
        android:background="@drawable/edittext_normal"/>
   </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal" 
    android:gravity="center_vertical"
    android:visibility="gone"
    >
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/ad_path"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/txtSize_title_medium"/>
      <TextView
        android:id="@+id/configurate_txt_adPath" 
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize_title_medium"
        android:background="@drawable/edittext_normal"/>
      <TextView
	       android:id="@+id/configurate_tv_adPath_edit" 
	       android:layout_width="50dp"
	       android:layout_height="wrap_content"
	       android:gravity="center_vertical"
	       android:textColor="@color/text_gray"
	       android:textSize="@dimen/txtSize_content_small"
	       android:singleLine="true"
	       android:drawableStart="@drawable/configurate_edit"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/price_path"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/txtSize_title_medium"/>
      <TextView
        android:id="@+id/configurate_txt_pricePath" 
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize_title_medium"
        android:singleLine="true"
        android:background="@drawable/edittext_normal"/>
      <TextView
	       android:id="@+id/configurate_tv_pricePath_edit" 
	       android:layout_width="50dp"
	       android:layout_height="wrap_content"
	       android:gravity="center_vertical"
	       android:textColor="@color/text_gray"
	       android:textSize="@dimen/txtSize_content_small"
	       android:drawableStart="@drawable/configurate_edit"/>
   </LinearLayout>
     <ListView
        android:id="@+id/lv_path"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:listSelector="@null">
    </ListView>
     <Button
         android:id="@+id/configurate_btn_confirm"
         android:layout_width="300dp" 
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:text="@string/confirm"
         android:textColor="@color/white"
         android:textSize="@dimen/txtSize_title_medium"
         android:background="@drawable/corner_blue_bg"/>
</LinearLayout>
