<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dip"
    android:paddingRight="30dip"
    android:gravity="center"
    android:background="@color/transparent"
    android:orientation="vertical"
   >
      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dip"
        android:background="@drawable/alertdialog_title_bg"
        >
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dip"
        android:text="@string/popwin_loadfile_title"
        android:textSize="@dimen/dialog_title_size"
        android:textColor="@color/dialog_text"/>
     </RelativeLayout>
       <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:orientation="vertical"       
	  >     
       <FrameLayout 
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="65dip"
			android:orientation="vertical"
			android:background="@drawable/alertdialog_middle_bg">   
			 <LinearLayout
				 android:id="@+id/ll_loadfile_hint"
				 android:layout_width="match_parent"
				 android:layout_height="match_parent"
				 android:orientation="horizontal"
				 android:gravity="center"
				 android:visibility="gone">
				<TextView
				  android:id="@+id/tv_loadfile_hint"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:textSize="@dimen/dialog_content_size"
				  android:textColor="@color/dialog_text" />
			 </LinearLayout>   
	          <ListView
	             android:id="@+id/lv_loadfile"
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:focusableInTouchMode="true"
	             android:listSelector="@color/list_selector"
	             android:divider="#DCDCDC"/>
	          </FrameLayout>
	       <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_alignParentBottom="true"
	       android:layout_height="65dip"    
	       android:orientation="horizontal"
	       android:gravity="center"
	       android:background="@drawable/alertdialog_bottom_bg" >
         <RadioGroup
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
 	        android:orientation="horizontal"
 	        android:gravity="center">
 	        <RadioButton
 	          android:id="@+id/rb_loadfile_popwin_ok"
 	          android:layout_width="wrap_content"
 	          android:layout_height="wrap_content"
 	          android:layout_marginRight="10dip"
 	          android:gravity="center"
 	          android:text="@string/confirm"
 	          android:textSize="@dimen/dialog_content_size"
 	          android:textColor="@color/white"
 	          android:button="@null"
 	          android:background="@drawable/confirmbtn_selector"/>
 	        <RadioButton 
 	          android:id="@+id/rb_loadfile_popwin_cancel"
 	          android:layout_width="wrap_content"
 	          android:layout_height="wrap_content"
 	          android:gravity="center"
 	          android:text="@string/cancel"
 	          android:textSize="@dimen/dialog_content_size"
 	          android:textColor="@color/white"
 	          android:button="@null"
 	          android:background="@drawable/cancelbtn_selector"/>
 	        </RadioGroup> 
 	      </LinearLayout>    
        </RelativeLayout>     
</LinearLayout>

